@@ -1,15 +1,16 @@
 ===========================================
-         Espeak For Asterisk 1.6
+           Espeak For Asterisk
 ===========================================
 
 This provides the "Espeak" dialplan application, which allows you to use
 the Espeak speech synthesizer with Asterisk. This module invokes the Espeak TTS engine
 locally, and uses it to render text to speech.
+It works with asterisk versions 1.6, 1.8, 10
 
 ------------
 Requirements
 ------------
-Asterisk 1.6 header files
+Asterisk header files
 Espeak libraries and header files
 	**It is recommended to use espeak version 1.41.01 or newer.
 	Earlier version of epseak had an file descriptor leak that could 
